--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/lduuv275/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775066.md#1">累跌89% 大陆电商巨头市值蒸发173亿</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774999.md#1">延安男子被副乡长绑走 妻子苦寻21年无果</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774898.md#1">台湾首投族增118万人 蓝绿齐催青年投票</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774966.md#1">南海争端再起 印尼动员渔民对抗中国船只</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774378.md#1">武汉肺炎大蔓延 香港疑似个案增至30例</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11773529.md#1">【拍案惊奇】什么是左胶？对社会有何影响</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774302.md#1">武汉肺炎持续扩散 香港全城抢购口罩</a><br>
-<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774249.md#1">武汉肺炎疫情蔓延 中共仍禁寄运口罩至香港</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775026.md#1">美推行业准则 对抗中共用人工智能压迫人民</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774871.md#1">跑分平台揭6款作弊手机皆大陆产 华为占5款</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774414.md#1">新年香港警方滥捕 玩失踪 被捕者家属苦候</a><br>
