--- a/gb/news2008_5.md
+++ b/gb/news2008_5.md
@@ -1,4 +1,13 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743755.md#1" target="_blank">一方沃土孕育《平安夜》 两百年后光环依旧</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743755.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_0464-1-150x120.jpg" align ="left"></a>1818年，201前的圣诞夜，在德奥边界离萨尔茨堡大约20公里的奥地利小城奥本多夫（Oberndorf）的圣．尼古劳斯教堂里，一曲《平安夜》（Stille Nacht，heilige Nacht）横空问世，逐渐成为世界上同一天被演唱次数最多的一首歌曲——圣诞之夜，全世界都在演唱这首歌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:47 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743187.md#1" target="_blank">让食物更安全美味  微波炉热菜注意事项</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/10/Untitled-9-150x120.jpg" align ="left"></a>用微波炉加热剩菜时，有许多要点必须留意，才可以让食物更美味，并降低食物中毒的风险。以下，是重新加热食品时的注意事项。如果你家中也有微波炉，可千万要仔细浏览，用知识来守护自己与家人的健康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:54 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743580.md#1" target="_blank">肾脏负责排出“体内废物” 保养肾脏的7个方法</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743580.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/kidney_519734128-1-150x120.jpg" align ="left"></a>肾脏是人体最主要的排泄器官，或称为“净化工厂”，负责排除体内的代谢废物。肾脏如此重要，我们要如何保护它？肾脏功能包括代谢产物如肌酐、尿素、尿酸等含氮物质或毒素，将随尿液排出体外。西医保养肾脏的秘诀
+。建议读者们平时多留意如下7个方面，保养好我们的肾脏，让身体更好地排出废物：1. 一定要多喝水。4. 别乱服药。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:37 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743677.md#1" target="_blank">温哥华征收4000万元房产空置税</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743677.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/DSC_0395-150x120.jpg" align ="left"></a>据美房置业网消息，温哥华市长肯尼迪·斯图尔特（Kennedy Stewart）说：“我们感谢所有缴纳房产空置的人，感谢他们为全市急需的经济适用房计划所提供的资金。”自2016年以来，温哥华市收取了近4,000万加元的房产空置税净收入。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:33 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743383.md#1" target="_blank">洗碗精、沐浴乳能加水稀释吗？医师：1种情况千万别</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743383.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/dish-soap-water_603953678-150x120.jpg" align ="left"></a>许多人都有在洗碗精、洗手液或沐浴乳里加水稀释使用的经历，这样做正确吗？情况一：洗碗精、洗手液或沐浴乳太浓了，一开封就加自来水稀释使用，浓度刚好，而且一瓶变成两瓶，比较省钱。情况二：洗碗精、洗手液或沐浴乳快用完了，倒不出来，直接丢弃又浪费。倒入自来水稀释，彻底用完。自来水加到洗碗精里，可增加细菌等微生物的量。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 3:35 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11739534.md#1" target="_blank">【食光-节气料理】客家咸汤圆 汤头鲜甜有层次</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11739534.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e9d1314dae4ab48d3cb2ceef19183e20-150x120.jpg" align ="left"></a>冬至是一年之中日照最短的一天，对台湾人来说是个象征团圆、温暖的节日。甚至有“冬至大如年”的谚语，可见冬至的重要性！台湾人在吃小汤圆时，常会将部分汤圆染成红色，形成红白相间的画面，象征“阴阳交泰”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:10 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/22/n11738522.md#1" target="_blank">组图：2019年可爱动物图片精选</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/22/n11738522.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912230224181758-150x120.jpg" align ="left"></a>动物是人类最亲蜜的朋友，为人类心灵带来慰藉，有它们的相伴，生命变得多彩。在此岁末之际，精选几帧可爱动物图片供读者欣赏。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:56 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11740662.md#1" target="_blank">不舍好友被埋葬 狗狗用爪子拨开土 主人看得哭了</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11740662.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/d3ae6caf14322503843c542d9b78a17f-150x120.jpg" align ="left"></a>这只狗狗不能理解什么叫死亡，无法接受朋友去世这个悲伤的事实。在视频中，一只棕色的狗狗试图要从坟墓坑里把朋友叫起来，不断地用它的爪子将土拨开，不想让自己的好友被土掩埋，看得主人一家都哭了！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 8:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11740687.md#1" target="_blank">冲浪选手救落海对手 总统感谢选择人性 放弃金牌</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11740687.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1280px-2010_mavericks_competition-150x120.jpg" align ="left"></a>在一场激烈的 冲浪比赛中，已进入冠军争夺战中，出现了无比暖心的一幕！一名菲律宾冲浪选手不顾比赛，转身去救一名印尼的竞争对手。影片在网路热传，也让印尼总统佐科威（Jokowi）在推特发文，感谢他愿意选择人性，放弃金牌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 8:06 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/21/n11737135.md#1" target="_blank">恩爱80年世界最长寿夫妻 现代婚姻榜样</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/21/n11737135.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4406b1e0f6335db7f721f5705cc380dd-150x120.png" align ="left"></a>美国德州一对被吉尼斯世界纪录评为“世界最长寿的夫妻”，正在庆祝他们的80周年结婚纪念日，不但亲朋好友共襄盛举参与庆祝活动，媒体也争相报导他们的故事；这对夫妻除了证实真爱可以持续一生外，也要向世人分享幸福与长寿的秘诀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11741025.md#1" target="_blank">为居家添新装 2020年室内色彩趋势分析</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11741025.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shutterstock_717804457-150x120.jpg" align ="left"></a>油漆是让屋子改头换面最简单的方式了！只要帮墙壁漆上新颜色，就能用一点小钱创造惊人的改变。如果，你最近正打算挑选家中的新色调，别错过专家们对2020年室内设计的色彩趋势分析，让这些美丽的色彩，激发你的灵感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 3:15 PM			</td></tr>
@@ -35,13 +44,5 @@ Jason Tao熟悉旧金山、湾区房地产.........<br><img align="bottom" src="http://www.
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/20/n11735081.md#1" target="_blank">海洋中心帮小海龟量体重太可爱 网友为何想歪了</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/20/n11735081.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4f11cbf723cd77a575719857c39e5138-150x120.jpg" align ="left"></a>网红动物当道，现在很多动物园纷纷分享它们的可爱动物吸引网友，东京小笠原海洋中心也不例外，日前发布的小海龟量体重的照片，不过却让很多 网友想歪了，并说它太可爱了。看不出表情的小海龟它到底用哪一招让网友萌化了呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11732567.md#1" target="_blank">受不了污染 70岁奶奶2年清洁了100个海滩</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11732567.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/01d2d982a871adecca2e41f418469398-150x120.jpg" align ="left"></a>70岁的祖母帕特?史密斯（Pat Smith）不在家里享清福，却每周跑到英国的海滩上做 净滩活动，在2018年清理了英国南海岸康沃尔郡52个海滩上的垃圾。到2019年底已经清理了100个海滩了，目前也仍然在进行中。她为什么要这么做呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/21/n11736546.md#1" target="_blank">多肉植物种在壁画板上　打造自己的小花园</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/21/n11736546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/plant-2754303_1280-150x120.jpg" align ="left"></a>前言：收录了近150张疗愈感十足的多肉植物与多肉组合作品照片，以及46则关于多肉植物如何帮助小琬老师、以及其他人“转面向”，一同度过人生的低谷与低潮的真实故事?小琬老师要与读者们分享她在“天、人、地”之间的生命体悟与感受，教你在多肉植物的小世界中学习“向内突破”，你将学会如何向植物学习－－找到你的自在，你的生命姿态?......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:31 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11732695.md#1" target="_blank">日高三生每天8小时苦练3年画出拟真动物</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11732695.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/b4d79488cff40fb38e8624476c1c2a31-150x120.jpg" align ="left"></a>日本一位就读高三的爱画画少年，他仅靠着120色的色铅笔，完成了多幅跃然纸上、栩栩如生的动物画，作品在网路上热传之后，引起多家媒体报导，也获得很多展览作品的机会。然而这些好成绩是他用3年的时间，每天练习8小时苦练出来的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/21/n11736552.md#1" target="_blank">国王企鹅住在日本家庭里 会自己到市场买鱼</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/21/n11736552.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-52091396-150x120.jpg" align ="left"></a>在人们的印象中，企鹅应该是生长在寒冷的南极，但日本却有一个家庭曾经养了一只宠物企鹅，它甚至会自己走到市场买鱼来吃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 1:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/17/n11728197.md#1" target="_blank">冬至养精蓄锐事半功倍 中医荐五种好药膳</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/17/n11728197.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/6544abeea6e33447f1ff984964dec67b-150x120.jpg" align ="left"></a>为何冬至要补肾？为何此时养精蓄锐事半功倍？阴阳五行养生的方法怎么作？告诉你常用好用养肾的好药膳食方。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 12:33 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11732332.md#1" target="_blank">酸奶：益肠道又饱腹 流传万年的饮食智慧</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11732332.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/yogurt_229091863-copy-150x120.jpg" align ="left"></a>在冷藏技术普及前，人们很少饮用鲜乳，大部分人食用的都是酸奶等经发酵的乳品。酸奶已有1万年的历史。最早的酸奶可能出现在安纳托利亚高原一带。古代牧民将羊奶储存在羊皮袋中，乳汁与皮袋上的原生菌种自然发酵，成为了酸奶。yogurt一词，可能来自土耳其语的yo?urmak，意思是变稠或凝结。乳汁的来源则可能是牛、羊......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 3:49 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/20/n11735109.md#1" target="_blank">2020年流行狗名预测  你家宠物上榜了吗？</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/20/n11735109.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_194083291_Subscription_L-150x120.jpg" align ="left"></a>养宠物的第一件事，就是帮它们取一个好名字。日前，TastyBone公司公布2020十大流行宠物名，其中漫威、DC的漫画人物，或是迪士尼的动画角色，都受到许多狗主人的青睐。此外，还有哪些名字呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 10:47 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11733400.md#1" target="_blank">一杯黄耆山楂饮 预防三高 还清血管垃圾</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11733400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/shanzhahuangqi-1220-150x120.jpg" align ="left"></a>你有“三高”的问题吗？高血压、高血脂、高血糖已成为现代人健康的杀手，稍有不慎，可能引发各种疾病，不可不防。一味黄耆山楂饮，可以帮你降三高。降三高的黄耆山楂饮煮法：准备黄耆6钱、山楂3钱。将药材放入保温杯中，直接泡入约500毫升沸水，30分钟后饮用。黄耆有补气的效果，民间常用于煮茶饮。山楂能消食化积、活血化瘀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:43 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/20/n11734780.md#1" target="_blank">车评：提升格调的R套装 2019 Volkswagen Tiguan</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/20/n11734780.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019_VW_Tiguan_01-150x120.jpg" align ="left"></a>众多的选择，有时候会令消费者难以选择，就如小型SUV市场百花齐放，几乎每一个品牌都有为这类车型推出产品，原因是购买SUV的人比购买房车的人更多，小型SUV在价格上及实用性最为合理，也即是性价比最高。Tiguan的第二代车款在去年推出市场，比上一代有显着改进，如果你也是准备购买一辆小型SUV，Volkswagen Tig.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:28 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/20/n11734446.md#1" target="_blank">看YouTube学会CPR 英7岁女童救母亲一命</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/20/n11734446.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_34880454_Subscription_L-150x120.jpg" align ="left"></a>英国普雷斯顿（Preston）一名女子因发病昏倒，所幸她7岁的女儿藉由在YouTube网站上学来的心肺复苏术（CPR）救了她一命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/lduuv275/djy/blob/master/gb/news2008_5.md#1<br><a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/lduuv275/djy/blob/master/gb/news2008_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_5.htm">http://www.epochtimes.com/gb/news2008_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
