--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -19,8 +19,9 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767902.md#1" target="_blank">香港中联办主任王志民被免职</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767902.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/180423090812100484-150x120.jpg" align ="left"></a>今天 （4日）傍晚，中共新华社发布“国务院任免国家工作人员”通稿，免除现任中联办主任王志民的职务，由中共人大财经委副主任委员骆惠宁接替。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 9:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767073.md#1" target="_blank">2019年前11个月 大陆车市产销量同比下降</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767073.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1175991142-150x120.jpg" align ="left"></a>大陆车市2019年持续下滑，去年11月，汽车市场累计产销量与2018年同期相比分别下降9%和9.1%。业内预测全年销量降幅在8%左右。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766968.md#1" target="_blank">武汉不明肺炎 专家：疫情越封锁越难防疫</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766968.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1881582-150x120.jpg" align ="left"></a>从去年12月起，武汉爆发“不明原因的病毒性肺炎”，在此次疫情中，中共官方似如往次疫情爆发般，再度意图隐瞒，且被迫曝光后只公开部分消息。这导致了一些民众对于SARS再现的恐慌，而另一些民众却毫无防范概念。中共对疫情的隐瞒，究竟会带来哪些危机？如何才是正当的防疫之道？隐瞒疫情消息，给国民安全带来极大风险：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767110.md#1" target="_blank">程晓容：长江白鲟灭绝 中共乃危机源头</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767110.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/04/1302080345551459-150x120.jpg" align ="left"></a>1月3日，“长江白鲟已灭绝”上了微博热搜，网上一片叹息。有网友说：“熬过白垩纪漫长8000万年却熬不过中共70年，可惜啊！中国人有一片福田却不珍惜。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 6:12 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766999.md#1" target="_blank">中共警察强制中小学男生抽血 建DNA数据库</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11766999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-454237724-1-700x420-600x400-150x120.jpg" align ="left"></a>中共正在设立全球最大的DNA数据库，此举引发争议。近期，中共警方在未通知家长的情况下，广西多个城市强行抽取中小学男生的血液样本，引起家长忧虑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:16 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/5/n11769311.md#1" target="_blank">新年刚过 陕西连发两起杀人案 致4死1伤</a><br></h3>2020年新年刚过，陕西传出两起杀人案。1月2日，陕西西安市第66中学女教师周某娟被高三学生李某伤害致死。1月4日，汉中市宁强县，男子徐某林将王某、雷某杰杀死，将9岁女童王某彤致伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/5/n11769417.md#1" target="_blank">因应武汉肺炎 香港启动“严重应变级别”</a><br></h3>武汉爆发疑似萨斯疫情，大陆社交媒体疯传后官方再补发公告，短短三天个案从27例飙升44例。香港近期到过武汉后发热、呼吸道感染及肺炎症状入院治疗有8人。港澳应对升级，香港启动“严重应变级别”。专家批北京政府处理失当，后果严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 6:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/5/n11768943.md#1" target="_blank">安徽淮南男子杀害女友藏尸行李箱 被判死刑</a><br></h3>近日，安徽淮南男子刘某杀害女友藏尸行李箱一案宣判，刘某一审被判处死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/5/n11768961.md#1" target="_blank">广东新生女婴被装袋挂公厕门把手 父母失踪</a><br></h3>1月1日，广东省梅州市一个公厕里，有民众发现厕所的门把手上挂着一袋东西，里面竟装着一个熟睡的小女婴。袋中还有一件成人衣服，但没有任何关于女婴信息的字条。经检查，女婴没有任何异常，身体也无畸形情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 3:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/5/n11768891.md#1" target="_blank">四川青样一住宅天然气泄漏起火 地面都震动</a><br></h3>1月4日深夜，四川成都青羊区一住宅小区天然气泄漏起火，并伴随爆炸声，导致1人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 2:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/5/n11768811.md#1" target="_blank">因手机被没收 西安高中生将老师杀害</a><br></h3>1月2日，陕西省西安市第66中学发生一起刑事案件，该校女教师周某娟被高三学生李某伤害致死。据了解，李某因在晚自习期间玩手机，被值班老师金某发现并予以没收。李某两次索要手机无果，在第三次进到办公室后，将另一名老师周某娟伤害致死，之后李某翻出学校大门逃离。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 1:17 PM							</td></tr>
@@ -34,6 +35,5 @@
 
 责.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 10:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11766694.md#1" target="_blank">【翻墙必看】中共官员自相残杀的背后</a><br></h3>可以肯定的说，只要共产党存在一天，中共从高层到底层官员的自相残杀就不会中止，因为除了他们脑中被灌输的斗争哲学外，更与共产一党专制对暴力格外的推崇有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 9:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767498.md#1" target="_blank">武汉肺炎疫情蔓延 香港专家：恐已人传人</a><br></h3>湖北武汉市不明原因肺炎（外界怀疑SARS疫情）风波在当局的封锁隐瞒下，内地一片“风平浪静”，香港则已启动严重应变级别，香港专家称有充分理由相信当地已发生怀疑人传人情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/lduuv275/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/lduuv275/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
