--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -33,7 +33,7 @@
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775172.md#1">武汉爆发神秘肺炎 美驻华使馆发健康警告</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775204.md#1">消炎药开成癫痫药 吉林6岁女童短暂失明</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/5/n11769986.md#1">【2019盘点】中共对法轮功学员残酷迫害</a><br>
-<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775066.md#1">累跌89% 大陆电商巨头市值蒸发173亿</a><br>
+<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775066.md#1">暴跌90% 大陆电商巨头市值蒸发173亿</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775078.md#1">【新闻看点】美再出新招：限制AI等技术出口</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774999.md#1">延安男子被副乡长绑走 妻子苦寻21年无果</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774898.md#1">台湾首投族增118万人 蓝绿齐催青年投票</a><br>
